Fix image paths for Overleaf manual upload
- Update all image paths from GitHub URLs to local img_tp1/ folder
- Add OVERLEAF_MANUAL_GUIDE.md with step-by-step upload instructions
- All figures now reference local files: img_tp1/filename.png
- Ready for Overleaf compilation with uploaded img_tp1 folder

--- a/rapport_tp1_imrad.tex
+++ b/rapport_tp1_imrad.tex
@@ -241,7 +241,7 @@ The synthetic dataset was successfully generated, producing 500 images with thei
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{https://github.com/yassinsmaoui/last_Tps.deep/raw/main/img_tp1/cell_07_output_02_image_01.png}
+    \includegraphics[width=0.8\textwidth]{img_tp1/cell_07_output_02_image_01.png}
     \caption{Examples of synthetic dataset images with their corresponding segmentation masks}
     \label{fig:dataset_examples}
 \end{figure}
@@ -250,7 +250,7 @@ Figure \ref{fig:dataset_distribution} presents the class distribution in the dat
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{https://github.com/yassinsmaoui/last_Tps.deep/raw/main/img_tp1/cell_07_output_03_image_02.png}
+    \includegraphics[width=0.8\textwidth]{img_tp1/cell_07_output_03_image_02.png}
     \caption{Class distribution and synthetic dataset statistics}
     \label{fig:dataset_distribution}
 \end{figure}
@@ -261,7 +261,7 @@ Figure \ref{fig:model_architectures} illustrates the architectures of the studie
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{https://github.com/yassinsmaoui/last_Tps.deep/raw/main/img_tp1/cell_09_output_00_image_03.png}
+    \includegraphics[width=0.8\textwidth]{img_tp1/cell_09_output_00_image_03.png}
     \caption{Comparison of U-Net and DeepLabV3 architectures}
     \label{fig:model_architectures}
 \end{figure}
@@ -293,7 +293,7 @@ Figure \ref{fig:training_curves} shows the evolution of metrics during U-Net mod
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{https://github.com/yassinsmaoui/last_Tps.deep/raw/main/img_tp1/cell_15_output_01_image_06.png}
+    \includegraphics[width=\textwidth]{img_tp1/cell_15_output_01_image_06.png}
     \caption{Evolution of training metrics for the U-Net model}
     \label{fig:training_curves}
 \end{figure}
@@ -312,7 +312,7 @@ Figure \ref{fig:predictions_visualization} presents a visual comparison between 
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{https://github.com/yassinsmaoui/last_Tps.deep/raw/main/img_tp1/cell_17_output_02_image_07.png}
+    \includegraphics[width=\textwidth]{img_tp1/cell_17_output_02_image_07.png}
     \caption{Visualization of U-Net model predictions on the test set}
     \label{fig:predictions_visualization}
 \end{figure}
@@ -363,7 +363,7 @@ Figure \ref{fig:model_comparison_chart} presents a visual comparison of the perf
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{https://github.com/yassinsmaoui/last_Tps.deep/raw/main/img_tp1/cell_18_output_01_image_08.png}
+    \includegraphics[width=\textwidth]{img_tp1/cell_18_output_01_image_08.png}
     \caption{Performance comparison of the three segmentation models}
     \label{fig:model_comparison_chart}
 \end{figure}
